# industrial-vision-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/dataset/: mvtec_bottle.yaml
configs/hardware/: mps.yaml
configs/model/: efficientad.yaml  patchcore.yaml
configs/module/: defect.yaml  detection.yaml  ocr.yaml
configs/tracking/: mlflow.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: architecture.md
docs/results/defect-patchcore-bottle/: report.md  threshold_tradeoff.csv
scripts/: download_data.py
src/ivp/: __init__.py  cli.py
src/ivp/common/: __init__.py  config.py  device.py  logging.py  seed.py  tracking.py
src/ivp/inference/: __init__.py  base.py  onnx_runtime.py
src/ivp/modules/: __init__.py
src/ivp/modules/defect/: __init__.py  data.py  infer.py  metrics.py  train.py
src/ivp/modules/detection/: __init__.py  train.py
src/ivp/modules/ocr/: __init__.py  train.py
src/ivp/service/: __init__.py  api.py  demo.py  schemas.py
tests/: conftest.py  test_config.py  test_device.py  test_metrics.py  test_seed.py  test_tracking.py
