# pyproject.toml — 单一事实来源（single source of truth）的项目元数据与依赖声明。
# 为什么用 pyproject + uv：相比 requirements.txt，pyproject 是 PEP 621 标准，
# 配合 uv.lock 锁文件能做到跨机器逐位可复现（reproducible），这是 CLAUDE.md 里
# 「工业级、可复现」要求的工程落地点，也是面试时能讲的工程规范卖点。
[project]
name = "ivp"                       # Industrial Vision Platform（工业视觉统一平台）
version = "0.1.0"
description = "工业视觉统一演示平台：缺陷检测 / 目标检测+计数 / OCR，共用 MLOps 工程底座"
readme = "README.md"
requires-python = ">=3.11,<3.12"   # 锁定 3.11：anomalib / PaddleOCR / Apple Silicon wheel 兼容性最佳
license = { text = "MIT" }
authors = [{ name = "qifan", email = "qfyang01@gmail.com" }]

# ── 核心依赖（base）─────────────────────────────────────────────────
# 只放「所有模块共享的 MLOps + 配置骨架」，保持基础环境轻量、安装快、测试绿。
# 重型 ML 框架（torch / anomalib / ultralytics / paddle）按阶段放进下方可选组，
# 进入对应阶段时再 `uv sync --extra <组名>` 安装，避免一上来就拉几个 GB。
dependencies = [
    "hydra-core>=1.3",        # 配置驱动：组合式配置、命令行覆盖、多组实验
    "omegaconf>=2.3",         # Hydra 底层的结构化配置容器
    "mlflow>=2.12",           # 实验追踪：每次 run 记录参数/指标/产物
    "pydantic>=2.6",          # 数据校验：service 层请求/响应模型、配置校验
    "pydantic-settings>=2.2", # 从环境变量/.env 读取配置（12-factor）
    "numpy>=1.26",
    "pillow>=10.0",           # 图像 I/O
    "rich>=13.0",             # 友好的 CLI 日志输出
]

[project.optional-dependencies]
# ── 阶段一：缺陷检测线 ──
defect = [
    "anomalib>=1.1",          # 无监督异常检测框架（PatchCore / EfficientAD）
    "torch>=2.2",             # MPS 后端（M4 GPU 加速）
    "torchvision>=0.17",
]
# ── 阶段二：目标检测 + 计数 ──
detection = [
    "ultralytics>=8.3",       # YOLO26 起步用其训练/导出工具链
    "supervision>=0.20",      # ByteTrack 跟踪 + 计数线工具
    "torch>=2.2",
    "torchvision>=0.17",
]
# ── 阶段三：OCR ──
# 注意：CLAUDE.md 明确 PaddleOCR 在 Apple Silicon 历史兼容性差，
# 这里默认放 EasyOCR；PaddleOCR 若要用，按官方 M4 教程装到独立 venv 或丢进 Docker。
ocr = [
    "easyocr>=1.7",
]
# ── 共享推理服务 + 演示界面 ──
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "gradio>=4.0",
    "onnxruntime>=1.17",      # ONNX 推理（导出后跨框架统一运行时）
    "python-multipart>=0.0.9",# FastAPI 文件上传
]

# ── 开发工具组（uv 的 dependency-groups，不随包发布）──
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",              # lint + format（替代 black+flake8+isort）
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
# 统一训练入口（Hydra @main），按 module=<...> 分发到具体模块
ivp-train = "ivp.cli:train_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ivp"]

# ── ruff：lint + format 配置 ──
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, N=命名, UP=pyupgrade, B=bugbear, D=docstring
select = ["E", "F", "I", "N", "UP", "B", "D"]
# D203/D213：二选一的 docstring 风格冲突项；
# D400/D415：要求首行以英文句点结尾，与中文句号「。」冲突，本项目中文 docstring 故关闭。
ignore = ["D203", "D213", "D400", "D415"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]          # 测试文件不强制 docstring

[tool.ruff.lint.pydocstyle]
convention = "google"

# ── mypy：静态类型检查 ──
[tool.mypy]
python_version = "3.11"
packages = ["ivp"]
ignore_missing_imports = true   # 第三方 ML 库多数无类型存根，先放宽
warn_unused_ignores = true

# ── pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
